[Fix] - Fixes spacing between footer entries

--- a/pat-ui/client/public/style.css
+++ b/pat-ui/client/public/style.css
@@ -138,6 +138,7 @@ body {
 }
 
 .tech-header {
+  margin-top: 1%;
   font-size: 3vw;
   height: 10%;
   width: 60%;
@@ -169,6 +170,14 @@ body {
   height: 5%;
   text-align: center;
   font-size: 2vw;
+  margin-bottom: 1%;
+}
+
+.blurb-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-bottom: 1%;
 }
 
 .blurb {
@@ -178,13 +187,23 @@ body {
   height: 40%;
 }
 
-.footer {
-  /* display: flex; */
-  margin-top: 5%;
+.footer-container {
+  height: 100%;
   width: 100%;
-  height: 90%;
   background-color: white;
   color: black;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer {
+  /* display: flex; */
+  margin-top: 0.5%;
+  width: 5%;
+  height: 90%;
+  margin-bottom: 0.5%;
   /* justify-content: flex-end; */
 }
 
